[tool.poetry]
name = "movie-data-capture"
version = "0.1.0"
description = ""
authors = ["lingxt <lxt9601@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_data_capture"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
dlib-bin = "^19.24.2"
click = "^8.1.7"
numpy = "^1.25.2"
face-recognition-models = "^0.3.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
pillow = "9.5.0"
cloudscraper = "^1.2.71"
pysocks = "^1.7.1"
urllib3 = "^2.0.4"
certifi = "^2023.7.22"
mechanicalsoup = "^1.3.0"
opencc-python-reimplemented = "^0.1.7"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
